--- a/src/main/resources/templates/front.html
+++ b/src/main/resources/templates/front.html
@@ -28,7 +28,7 @@
             <label for="password">Kodeord</label>
             <input type="password" id="password" name="password" placeholder="Kodeord">
             <button type="submit">Log ind</button>
-            <a href="nybruger.html"><button type="button">Opret ny bruger</button></a>
+            <a th:href="@{nybruger}"><button type="button">Opret ny bruger</button></a>
         </form>
     </div>
 </div>
