--- a/src/main/resources/templates/nybruger.html
+++ b/src/main/resources/templates/nybruger.html
@@ -22,7 +22,7 @@
 </div>
 <div class="main">
   <div class="container">
-    <form action="nybruger" method="POST">
+    <form action="/signup" method="POST">
       <label for="username">Brugernavn</label>
       <input type="text" id="username" name="username" placeholder="Brugernavn">
       <label for="password">Kodeord</label>
