--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,16 +5,18 @@
     width: 100%;
     line-height: 5px;
     left: 0;
-    border-bottom: 1px solid #1877f2;
+    border-bottom: 1px solid lightseagreen;
     background-color: white;
+    height: 75px;
 }
+
 .logo {
     padding-left: 10px;
 }
 h1 {
     font-size: 52px;
     margin-bottom: 40px;
-    color: #1877f2;
+    color: lightseagreen;
 }
 .container {
     max-width: 365px;
@@ -25,6 +27,24 @@ h1 {
     border-radius: 8px;
     text-align: center;
 }
+.wishlist {
+    margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
+    border-radius: 8px;
+    text-align: left;
+    float: left;
+}
+
+ul {
+    padding-left: 0;
+}
+.read-only ul li {
+    padding-bottom: 15px;
+}
+
 input[type="text"],
 input[type="password"] {
     margin: 15px 0;
@@ -36,9 +56,6 @@ input[type="password"] {
     font-size: 16px;
     background-color: #f0f2f5;
 }
-.button {
-
-}
 
 button[type="submit"] {
     margin-bottom: 15px;
@@ -49,11 +66,59 @@ button[type="submit"] {
     font-size: 16px;
     font-weight: bold;
     color: #fff;
-    background-color: #1877f2;
+    background-color: lightseagreen;
+}
+
+#del a {
+
+    text-decoration: none;
+    color: white;
 }
 button[type="submit"]:hover {
-    background-color: #166fe5;
+    background-color: #188883;
 }
+.abort-button {
+    background-color: red !important;
+    color: white !important;
+    border: none !important;
+    padding: 10px 20px !important;
+    margin-right: 2px !important;
+    font-size: 14px !important;
+    width: auto !important;
+    float: right; !important;
+    margin-left: 10px; !important;
+
+}
+
+.abort-button:hover {
+    background-color: darkred !important;
+}
+
+.logout-button {
+    background-color: red !important;
+    color: white !important;
+    border: none !important;
+    padding: 10px 20px !important;
+    margin-right: 10px !important;
+    font-size: 18px !important;
+    width: auto !important;
+    float: right; !important;
+}
+.logout-button:hover {
+    background-color: darkred !important;
+}
+
+.wishlist li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.wishlist li a {
+    display: block;
+}
+
+
 button[type="button"] {
     padding: 10px;
     width: 60%;
@@ -76,4 +141,3 @@ button[type="button"]:hover {
 .main {
     padding-top: 80px;
 }
-
