--- a/src/main/resources/templates/nybruger.html
+++ b/src/main/resources/templates/nybruger.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" th:href="@{css/style.css}" href="../static/css/style.css">
+  <link rel="stylesheet" th:href="@{css/style.css}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
